--- a/con.html
+++ b/con.html
@@ -17,6 +17,84 @@
         <h3>"I don't think we should ever compensate players. I think we can do as much as we can for players. The cost of attendance is good. They get more meals now so they can keep their meal money. I think those are all good things and I think more of those things should have been done. But I don't think you can compensate players straight out. What's the salary? How much? Do you pay football, men's basketball, women's basketball? We got a great lacrosse team, do we pay those guys? <br> The fallacy of the payment thing and they all say the same exact thing: 'It's a billion dollar business.' No, it's not. There might be income coming in, but it goes to all the other sports. It's not just coming into basketball and we're keeping it all.  We're bringing it in and it's paying for all the other sports. So at the end of the day, I know for a fact at Syracuse that it's zero. We have zero money left in the athletic department at the end of the year. Without paying anybody. <br> And everybody says, 'The coach makes this and the players (don't make anything).' The player is 17 years old. I've been working my whole life. There's a lot of 17-year-old kids that don't make money. Most of them. These 17-year-old kids are getting a $75,000 scholarship. And they compare that to a coach making all this money. What's the comparison there? I'm a grown man. I've been working for 50 years. That's just not a comparison. It makes no sense.  You might as well say that NBA players aren't making enough money because the owner's worth $2 billion. So the players should be making more money. It just makes no sense."</h3>
         <h4><em>Jim Boeheim</em>, Syracuse Men's Basketball Head Coach</h4>
       </div>
+
+      <div class="individual-quote">
+        <h3>"I believe that paying athletes who have no notion of the importance or the value of education presently would only make these sexy-sport athletes even more lost in the quest for an education."</h3>
+        <h4>- <em>Sharon Kay Stoll</em>, professor at University of Idaho focused on ethics and philosophy of sports</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"The best way to stop the problem of agents would be for the NCAA to come down hard and suspend a school for two years if it finds players with agents on campus."</h3>
+        <h4>- <em>Dean Smith</em>, former University of North Carolina Men's Basketball coach</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"There’s no more money. Everybody is working as hard as they can to generate as much revenue as humanly possible and all, but a handful of schools operate in the red"</h3>
+        <h4>- <em>Steve Patterson</em>, current CEO of the Arizona Coyotes</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I don’t think athletes are being exploited. I think there’s a symbiotic relationship there. Without the university platform for them to compete, there is no exposure for them. None. So that experience alone and that opportunity creates the platform for them, for visibility. I just think the money issue has clouded what the real purpose is, regardless of where the money is coming from and how much is coming in. I want the whole story to be told about the value of an education and put dollars to that."</h3>
+        <h4>- <em>Judy Rose</em>, former director of athletics for the University of North Carolina at Charlotte</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I’m fearful that the courts, our autonomy, and our governance structure is moving us away from what we have called the collegiate model for the last 50 years and more toward a professional model or more toward the Olympic model. And what that will do, in my opinion, is channel more resources to fewer people."</h3>
+        <h4>- <em>Bubba Cunningham</em>, current athletics director and the University of North Carolina</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"It makes sense that they should have money, but the idea of it is a little scary to me. One thing I’ve thought of would be setting it aside for them after they leave college. To me that would make the most sense, after they’re out of their amateur status."</h3>
+        <h4>- <em>Gerald Heraldson</em>, former Philadelphia 76ers player, former Duke University Men's Basketball player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Remunerating these young people makes them employees, not students. Colleges and universities should work for them, not the reverse. Many student athletes receive scholarships to help pay for their education. They may be exploited by over-zealous coaches who overwork them, TV networks that impose game scheduling that interferes with academic time, and outdated NCAA rules that prohibit athletes from taking jobs. But it is the NCAA’s and school administrators’ responsibility to protect, not abuse them."</h3>
+        <h4>- <em>Howard P. Chudacoff</em>, history professor at Brown University</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Most high-profile college athletes really have very little leverage in a genuine job market. A full grant-in-aid provides both direct and indirect resources from which one can pursue significant, substantive educational and professional goals. Its attractiveness stands out when one considers the financial challenges and loan debts that face most of the nation’s college students."</h3>
+        <h4>- <em>John R. Thelin</em>, professor at University of California, Berkeley focused on the history of higher education</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I think when you’re talking about payment for playing, once we go down that road, we become a second or third-tier professional league. I don’t see an end to that. I don’t want Mike or the University bidding on a player."</h3>
+        <h4>- <em>Fr. John Jenkins</em>, University of Notre Dame President</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Traditions and keeping them are very important to universities. These individuals are not professionals. They are representing their universities as part of a university community. People come to watch... because it’s college sports, with college athletes."</h3>
+        <div class="space"></div>
+        <h3>"The question is, what should the relationship be between students and their university? If you were to pay student-athletes a salary – it doesn’t matter what the number is – if you pay somebody a salary to play football for you, let’s say, now they’re no longer a student. They’re an employee. When you make that decision that you’re going to literally now hire students or hire individuals to play football for you, then it completely changes the whole concept of students playing students."</h3>
+        <h4>- <em>Mark Emmert</em> President of the NCAA</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"That’s an easy crutch for everyone to throw out right now, ‘we just should pay them.’ You think trying to get a hold of college basketball as we’re trying to, you think it’s tough now, you throw that one in there, it’s going to be out of control."</h3>
+        <h4>- <em>Mike Brey</em>, current Notre Dame Men's Basketball coach</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I put a pencil to it once. When you add in travel, cost of attendance and the nutrition and the health care, what we have to offer is about a $225,000-a-year job. That ain’t bad."</h3>
+        <h4>- <em>Bill Moos</em>, current director of athletics at the University of Nebraska</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"For our full scholarship student-athletes, we pay about $76,000 a year in cash for cost of attendance, tuition, room and board – not anything related to operating the team. Just money spent on the behalf of that individual... It’s about going to the school. Nothing else. I’m not putting any of the athletic elements in there. For someone coming out of high school, that compared to going into minor league baseball or the NBADL or minor league hockey, it’s not close. So, from a market perspective, it’s a much better deal."</h3>
+        <h4>- <em>Jack Swarbrick</em>, current director of athletics at Notre Dame</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"NCAA rules further the popularity of college sports: The U.S. District Court for the Northern District of California and the U.S. Court of Appeals for the 9th Circuit already have recognized in an earlier case, O’Bannon v. NCAA, that fundamentally changing the nature of college sports through elimination of financial aid and benefits rules would erode the appeal for fans, alumni, and students."</h3>
+        <h4>- <em>NCAA Website</em> </h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Athletes today are treated much, much better: the best in the history of college sports. When I was in school, we received $15 per month in laundry money. Today, student-athletes receive the full cost of attendance and many other benefits... No one attempts to take their scholarships if they do not start on a team. There is millions of dollars for emergency expenses such as a winter coat or flying home for a family emergency. The food is unlimited and better... As another recent example, the NCAA just announced that it would again pay travel costs for the family members of those playing in the Final Four."</h3>
+        <h4>- <em>Tom McMillan</em> CEO of Lead1 which represents the athletics directors and programs of the football bowl subdivision</h4>
+      </div>
+
     </div>
   </body>
 </html>
