--- a/court-cases.html
+++ b/court-cases.html
@@ -18,32 +18,69 @@
         <div class="circle"><h2>1984</h2></div>
         <h3>NCAA v. <br> Board of Regents</h3>
         <div class="button-modal board-of-regents-reveal">
+          <div class="scroll-area"></div>
           <p><em>Background:</em> The NCAA had negotiated for 14 games to be played on ABC and CBS. Payment was then dispersed to the teams that participated. The NCAA's plan was to prevent televised games from encouraging fans to skip live games and watch from home instead. The problem was in the lack of power for schools to negotiate their own television deals.</p>
           <p>Many major schools created a new group within the NCAA called the College Football Association (CFA) which then negotiated a separate television contract that was better for the schools involved. The schools within the CFA had more opportunities to play on television and earned higher revenues from the contract. The NCAA decided to announce disciplinary action for the schools participating in the CFA, and some of the schools took the issue to court.</p>
           <p><em>Question:</em> Does the NCAA plan for televised football games impose a restraint on the free market and thus violate the Sherman Act?</p>
           <p><em>Ruling:</em>The Supreme Court voted 7-2 in favor of the Board of Regents. The court ruled the NCAA's plan created a market unresponsive to viewer demands. By limiting the number of live games on television, the NCAA was attempting to inflate prices for tickets as in a monopoly.</p>
-          <p><em>Result:</em> This ruling has allowed for big contracts to be created by individual schools (e.g., Notre Dame with NBC) and by conferences (e.g., the Longhorn Network in partnership with ESPN)</p>
+          <p><em>Impact:</em> This ruling has allowed for big contracts to be created by individual schools (e.g., Notre Dame with NBC) and by conferences (e.g., the Longhorn Network in partnership with ESPN)</p>
         </div>
       </div>
       <div class="case tarkanian">
         <div class="circle"><h2>1988</h2></div>
         <h3>NCAA v. <br> Tarkanian</h3>
+        <div class="button-modal tarkanian-reveal">
+          <div class="scroll-area"></div>
+          <p><em>Background:</em> Jerry Tarkanian, head Men's Basketball Coach at UNLV, was suspended from his role after the University was sanctioned by the NCAA for their recruiting practices. Tarkanian began by suing UNLV for the lack of due process in deciding to suspend him. Tarkanian won the first case in state court. UNLV then appealed and the NCAA joined the lawsuit. Tarkanaian again won the case. The NCAA decided to again appeal, however, UNLV did not.</p>
+          <p><em>Question:</em> Does the NCAA and their member institutes need to follow the due process laws given in the 14th Amendment?</p>
+          <p><em>Ruling:</em> The Supreme Court ruled 5-4 for the NCAA. The court concluded that the NCAA was not a state actor and, therefore, did not need to adhere to the 14th Amendment the same way as a government agency.</p>
+          <p><em>Impact:</em> There are many different anecdotes of the NCAA choosing to apply rules unevenly which is less preventable since they do not have to follow the laws of due process.</p>
+        </div>
       </div>
       <div class="case law">
         <div class="circle"><h2>1998</h2></div>
         <h3>Law v. <br> NCAA</h3>
+        <div class="button-modal law-reveal">
+          <div class="scroll-area"></div>
+          <p><em>Background:</em> A new group of coaches – "restricted earnings" – was defined in a new rule. The rule limited the the salaries of these coaches to $16,000 per year. A number of coaches challenged the NCAA's right to limit their salaries arguing the rule was a contract in restraint of trade. The NCAA argued that they had specific power in the market and defined justifications defending their salary limit.</p>
+          <p><em>Question:</em> Does the NCAA's limit on annual compensation for coaches violate the Sherman Anti-trust Act?</p>
+          <p><em>Ruling:</em> The district court ruled in favor of Law and the rest of the coaches. The court decided the restricted earnings cap violated anti-trust law and was not covered by the exception from NCAA v Board of Regents.</p>
+          <p><em>Impact:</em> The coaches not won the case, therefore, allowing a higher salary, they also won a judgement on back pay. In 2009, the back pay was finally settled at $54.5 million.</p>
+          <p>A big question left from this case is what is the difference between the coaches and the players making a salary cap okay on one but not the other?</p>
+        </div>
       </div>
       <div class="case white">
         <div class="circle"><h2>2008</h2></div>
         <h3>White v. <br> NCAA</h3>
+        <div class="button-modal white-reveal">
+          <div class="scroll-area"></div>
+          <p><em>Background:</em> Former Football and Men's Basketball players decided to sue the NCAA on behalf of all student-athletes participating at the highest levels of Football and Men's Basketball. The former student-athletes argued NCAA member institutions' limit on athletic-based aid including tuition, books, housing, and meals was violating anti-trust laws.</p>
+          <p><em>Question:</em> Did the NCAA violate antitrust laws by limiting athletic-based aid?</p>
+          <p><em>Ruling:</em> A settlement was reached prior to the case being tried.</p>
+          <p><em>Impact:</em> A $10 million fund was started for former NCAA athletes can apply to for funds for career development or reimbursement of educational expenses. The settlement also led to a loosening of how member schools could use their money to support student-athlete academic development. The NCAA also changed their policies on health and accident insurance after this case.</p>
+        </div>
       </div>
       <div class="case obannon">
         <div class="circle"><h2>2014</h2></div>
         <h3>O'Bannon v. <br> NCAA</h3>
+        <div class="button-modal obannon-reveal">
+          <div class="scroll-area"></div>
+          <p><em>Background:</em> Ed O'Bannon, a former UCLA basketball player discovered his likeness was being used in a video game and was receiving no payment for the continued use of his name, number, playing ability, and physical characteristics. The case focused on former student-athletes and argued the NCAA violated antitrust laws by preventing the former athletes from receiving remuneration for use of their image. The NCAA responded with four justifications: 1) commitment to amateurism, 2) competitive balance among D1 teams, 3) combination of athletics and academics, 4) increased output of product.</p>
+          <p><em>Question:</em> Is the NCAA violating antitrust laws by preventing former players from getting paid for use of their image?</p>
+          <p><em>Ruling:</em> U.S. Court of Appeals for the Ninth Circut ruled in favor of O'Bannon. The court ruled that certain practices of the NCAA's amateur principles – specifically related to use of image and likeness – violated anti-trust laws. The court added that by offering the full cost of attendance the NCAA membership institutes were able to avoid the violation of anti-trust laws. O'Bannon tried to appeal to the Supreme Court, but the case was denied.</p>
+          <p><em>Impact:</em> O'Bannon won the case, however, they hoped to have a bigger reward. The biggest outcome of this case was the discontinuation of video games based on college programs and characters in the game that were based almost solely on players. This case holds more of an impact as a potential spitfire for more cases in similar situations.</p>
+        </div>
       </div>
       <div class="case alston">
         <div class="circle"><h2>2019</h2></div>
         <h3>Alston v. <br> NCAA</h3>
+        <div class="button-modal alston-reveal">
+          <div class="scroll-area"></div>
+          <p><em>Background:</em> Shawne Alston, a former West Virginia running back, and Justine Hartman, a former University of California, Berkeley basketball player, were the lead plaintiffs. They argued that the NCAA's limit on scholarship value violates anti-trust laws which is proved by the very similar numbers across the board. The NCAA responded with two main arguments: 1) players not being paid is important to the interest of fans, 2) student-athletes are more able to integrate into the community.</p>
+          <p><em>Question:</em> Is the NCAA's cap on scholarships a violation of antitrust laws?</p>
+          <p><em>Ruling:</em> Judge Claudia Wilken ruled that the current system that caps scholarships in the NCAA is illegal. The ruling concluded that the NCAA is not allowed to limit the amount of money related to academics the athletes are able to receive.</p>
+          <p><em>Impact:</em> The effects of this case are still unclear right now. However, the judge did not require any changes to be made by the NCAA nor its member institutes.</p>
+        </div>
       </div>
     </div>
   </body>
