--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
       </div>
       <div class="flex-pro-con">
         <div class="fiction-buttons">
-          <h2><a href="pro.html">Quotes <em>supporting</em> paying student-athletes</a></h2>
+          <h2><a href="pro.html">See quotes <em>supporting</em> paying student-athletes</a></h2>
         </div>
 
         <div class="fiction-buttons">
-          <h2><a href="con.html">Quotes <em>against</em> paying student-athletes</a></h2>
+          <h2><a href="con.html">See quotes <em>against</em> paying student-athletes</a></h2>
         </div>
       </div>
       <div class="summary">
