--- a/ncaa-finances.html
+++ b/ncaa-finances.html
@@ -34,7 +34,7 @@
     </div>
     <div class="profit-equation">
       <div class="equation-parts">
-        <h1>844M</h1>
+        <h1 style="text-decoration:none">844M</h1>
         <h5>D1 men's basketball championship television and marketing rights</h5>
         <div class="equation1 championship-tickets">
           <h1>133M</h1>
@@ -44,7 +44,7 @@
             <p>The D1 College Football Playoffs and all of the bowl games are run independently of the NCAA, so the NCAA does not fund nor receive revenue from these games.</p>
           </div>
         </div>
-        <h1>n/a</h1>
+        <h1 style="text-decoration:none">>0</h1>
         <h5>other revenues from a variety of sources</h5>
       </div>
 
