--- a/pro.html
+++ b/pro.html
@@ -25,7 +25,117 @@
       </div>
 
       <div class="individual-quote">
-        <h3></h3>
+        <h3>“I got some cash from agents. I’ve talked to the NCAA. I think that should be legal. I want some money, too; everybody else is making money. I want to go on dates. I want to buy myself some new suits. I want to buy myself some new sneakers, and I paid the agents back.”</h3>
+        <h4>- <em>Charles Barkley</em>, current Inside the NBA analyst, former NBA player, former Auburn Men's Basketball player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"When you’re on a football scholarship, you get a stipend that’s supposed to cover your rent and a few incidentals. It was $360 a month. This was the late 1980s, and the NCAA has an interesting rule where you’re not allowed to supplement your income with a part-time job."</h3>
+        <h4>- <em>Jason Chaffetz</em>, retired politician, former U.S. Representative from Utah</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Mark Emmert, the head of the NCAA, makes millions. Coaches today are making millions. Who’s not making anything? I don’t want to hear about they get scholarships. Yeah, they get scholarships all right, they earn those scholarships.""</h3>
+        <h4>- <em>Dick Vitale</em>, current basketball sportscaster, former Detroit Pistons head coach, former Rutgers Men's Basketball head coach</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"The NCAA makes a lot of money off of athletes and they pretend to be student-athlete friendly. I don’t see any friendliness with suspending a kid indefinitely for making a mistake."</h3>
+        <h4>- <em>Scott Marr</em>, current Albany Men's Lacrosse coach (after one of his players was suspended for tagging a brand in an Instagram post)</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I really didn’t like amateurism, I called it shamateurism."</h3>
+        <h4>- <em>Billie Jean King</em>, former professional tennis player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Despite the hours I put in every day, practicing, learning plays, and traveling around the country to play games, and despite the millions of dollars our team generated for UCLA – both in cash and in recruiting students to attend the university – I was always too broke to do much but study, practice, and play."</h3>
+        <h4>- <em>Kareem Abdul-Jabbar</em>, former NBA player, former UCLA Men's Basketball player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"It’s frustrating because a lot of people get upset with student-athletes and say you’re not focused on school and not taking advantage of the opportunity you’re given. I would love for a regular student, for just one semester, to have a student-athlete schedule during the season and show me how you balance that. Show me how you would schedule your classes when you can’t schedule classes for 2 to 6 o’clock on any given day. Show me how you’re going to get all your work done when you get out at 7:30 or so and have a test the next day and you’re dead tired from practice and you still have to study and get the same work done."</h3>
+        <div class="space"></div>
+        <h3>"People think, ‘Oh, you’re on scholarship.’ They pay your room and board, they pay for your education, but to their knowledge, you’re there to play football. You’re not on scholarship for school and it sounds crazy when a student-athlete says that, but those are the things coaches tell them every day: ‘You’re not on scholarship for school."</h3>
+        <h4>- <em>Richard Sherman</em>, current San Francisco 49ers cornerback, former Stanford University cornerback</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"You go to Chapel Hill and try to go to a Carolina-Duke game, good luck trying to find a ticket. It’s nationally televised. There’s so much money that goes behind just one basketball game. I do think the players from both sides should definitely see some type of benefit."</h3>
+        <h4>- <em>Marvin Williams</em>, current Charlotte Hornets player, former University of North Carolina player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I feel like as much money as universities make, I feel that some of that money should be given down to the players as well because we are the ones that are making this university money. These bowl games? Without the players, how much money do they make? None."</h3>
+        <h4>- <em>Adrian Peterson</em>, current Washington Redskins running back, former University of Oklahoma running back</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"The way I look at this issue is that college athletes should not be prevented from being paid. Putting aside whether universities should be footing the bill, the NCAA shouldn’t restrict the kinds of benefits and remuneration that college athletes might be able to earn in the marketplace. That is, athletes should be free to sign endorsement deals with Under Armour or do endorsements for the local car dealership. The analogy would be to a performance arts major acting in a commercial or performing in the local symphony. The university doesn’t pay these students, but they are not restricted from being compensated by outside parties for their talent and work."</h3>
+        <h4>- <em>Shawn E. Klein</em>, sports ethicist, current lecturer at Arizona State University</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"College sports is the only industry in this country whereby the court system has essentially ruled that competing sellers of a commercial product are allowed to conspire to suppress the value of the human capital that generates their profits. The system also permits these sellers to collectively dictate the process by which the labor can resolve disputes concerning their rights, eligibility, etc."</h3>
+        <h4>- <em>Richard Karcher</em>, current sports law professor at Eastern Michigan University, former professional baseball player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I believe that college athletes who appear on television should be paid out of any money received by their respective schools from the television networks... Paying college athletes would encourage athletes to stay in school longer and not leave for a professional career"</h3>
+        <h4>- <em>Joseph M. Sofio</em>, current sports and entertainment attorney, former sports agent</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"In any facet of college life, only one class of people have any financial restriction on them at all and that’s athletes. So, the idea that it’s based on education is a lie. No other student is told what they can and cannot make, and if it affects their education, or scholarship, or anything."</h3>
+        <div class="space"></div>
+        <h3>"Look at it this way – child actors get paid. If the studios decided, together – if they colluded together – ‘Look, we aren’t going to pay these kids anymore. What we will do is we will give them their expenses and really nice accommodations on set. We will give them tutors and we will make it a good experience for them. But, we all agree we are not going to pay them anymore.’ ... You would say, ‘ no, no – this is not the school play. This is a multi-billion dollar business. Billions of dollars are being made and my kid is the star of the show. That’s not right. This is a commercial enterprise.’ Well, college sports is a commercial enterprise... they charge big money. And they sell it, they sell it to television."</h3>
+        <h4>- <em>Jay Bilas</em>, current college basketball analyst, former Duke University Men's Basketball player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"They are selling our jerseys with our numbers and making money off of ticket sales, so I think college athletes should get paid."</h3>
+        <h4>- <em>Jadeveon Clowney</em>, current Houston Texans linebacker, former USC linebacker</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I truly believe, during some point in the future, college athletes should be paid. The NCAA is not a bad organization – don’t get me wrong, it’s an unbelievable organization – but in some way they’re taking advantage of college athletes that sign their name into a certain school... And with players’ jerseys being sold and them not seeing any of that, and then being used for video games, I think eventually something’s gotta give and players end up being paid."</h3>
+        <h4>- <em>A.J. McCarron</em>, current Houston Texans quarterback, former University of Alabama quarterback</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"All the money they generate for the programs and stuff, it’s kind of an unfair system. Everybody knows everybody’s getting paid and that’s how it is. Everybody’s getting paid anyway. You might as well make it legal."</h3>
+        <h4>- <em>Lonzo Ball</em>, current Los Angeles Lakers player, former UCLA Men's Basketball Player</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"I think the NCAA is one of the biggest scams in America, because these kids put so much on the line, and they study hard, they play football as hard as they can, but if they don’t crack the NFL, then the NCAA says, ‘we gave you a free degree.’ That’s like me owning a restaurant and saying, ‘I’ll give you a free burger.’... I’m just giving you something I already have. Athletes don’t get enough credit, and a lot of the schools don’t really do anything for the guys after they graduate. I think there are very few schools that actually care about the players."</h3>
+        <h4>- <em>Michael Bennett</em>, current New England Patriots defensive end, former Texas A&M defensive lineman</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Athletes in football and basketball feel unfairly treated. The dominant attitude among players is that there is no moral or ethical reason not to take money, because the system is ripping them off"</h3>
+        <h4>- <em>Leigh Steinberg</em>, current sports agent</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"It’s absolute lip service from the NCAA when they say they are about education."</h3>
+        <h4>- <em>Gerry Gurney</em>, current assistant professor at the University of Oklahoma, </h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"If you’re benefitting directly economically from the work and talent of these young people, then the young people need to be getting some of that money. And it wouldn’t make sense to me that the schools get to keep all of the money they’re making off of the work that these athletes are doing without paying the athletes themselves."</h3>
+        <h4>- <em>Andrew Yang</em>, 2020 presidential candidate, founder of Venture for America</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"Most sports can be justified as part of what a university does. But big-time football and men’s basketball are clearly commercial entertainment and have been pulled away from the fundamental purpose of a university."</h3>
+        <h4>- <em>James Duderstadt</em>, president emeritus of the University of Michigan</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"What draws us to college athletics is that we love seeing students representing our schools. That would be just as true if they were being paid. The NCAA likes to conflate paying college athletes with the issue of whether they would still be students. Students get paid all the time."</h3>
+        <h4>- <em>Andy Schwarz</em>, antitrust economist focused on sports</h4>
       </div>
     </div>
   </body>
