--- a/sources.html
+++ b/sources.html
@@ -6,12 +6,58 @@
     <link rel="stylesheet" href="facts.css">
     <link rel="stylesheet" href="https://use.typekit.net/csn4igg.css">
   </head>
+  <style>
+    body{
+      width:1100px;
+      margin: 0 auto;
+    }
+    li{
+      margin: 20px;
+    }
+  </style>
   <body>
     <div class="header">
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>Where Did all of These Statistics Come From?</h1>
       <p></p>
     </div>
-
+      <ul>
+        <li>Americaninno.com, www.americaninno.com/boston/ncaa-revenue-mark-emmert-quotes-on-paying-college-athletes/.</li>
+        <li>Equity in Athletics, ope.ed.gov/athletics/#/.</li>
+        <li>College Athletic Scholarship Limits - Scholarship Stats.com, www.scholarshipstats.com/ncaalimits.html.</li>
+        <li>“A Group of Top NCAA Athletic Directors Is Having Its Gala at Trump's Hotel to Prevent Athlete Pay.” ThinkProgress, thinkprogress.org/athletic-directors-want-trumps-help-in-keeping-student-athletes-unpaid-634029b309ce/.</li>
+        <li>Winn, Andrew. “Notre Dame's Jack Swarbrick: Pay Players for Using Their Name, Image or Likeness.” One Foot Down, One Foot Down, 9 Mar. 2017, www.onefootdown.com/2017/3/9/14868570/notre-dame-athletic-director-jack-swarbrick-pay-players-for-using-their-name-image-or-likeness-ncaa.</li>
+        <li> Camden, Jim. “Bill Says Defy NCAA, Let College Athletes Accept Pay.” Spokesman.com, The Spokesman-Review, 8 Jan. 2019, www.spokesman.com/stories/2019/jan/07/bill-says-defy-ncaa-let-college-athletes-accept-pa/.</li>
+        <li>“Clowney: Pay College Athletes.” ESPN, ESPN Internet Ventures, 13 Feb. 2014, www.espn.com/nfl/draft2014/story/_/id/10449257/jadeveon-clowney-says-college-athletes-paid.</li>
+        <li> Cmaadmin. “NCAA To Provide Former Student-Athletes With Benefits.” Diverse, 8 Aug. 2008, diverseeducation.com/article/11535/.</li>
+        <li> CollegeSimply. “Home.” In - List of Colleges and Universities In, www.collegesimply.com/colleges/. Ditota, Donna. “Jim Boeheim Had a Lot to Say on Paying Players, His Team and Buddy's Real Name.” Syracuse.com, Syracuse.com, 24 Oct. 2018, www.syracuse.com/orangebasketball/2018/10</li>
+        <li>jim_boeheim_had_a_lot_to_say_on_paying_players_his_team_and_buddys_real_name.html. Eromosele, Diana Ozemebhoya, and Diana Ozemebhoya Eromosele. “Kareem Abdul-Jabbar: College Athletes Should Be Paid .” </li>
+        <li>The Root, The Root, 12 Jan. 2017, www.theroot.com/kareem-abdul-jabbar-college-athletes-should-be-paid-1790877698.</li>
+        <li>“Finances.” NCAA.org - The Official Site of the NCAA, www.ncaa.org/about/resources/finances. </li>
+        <li>“Fr. Jenkins, Mike Brey Address NCAA Commission's Findings // The Observer.” The Observer, 26 Apr. 2018, ndsmcobserver.com/2018/04/jenkins-notre-dame-ncaa-commission/. Ganim, Sara. “NCAA Chief Mark Emmert: Paying College Athletes Would Hurt Traditions.”</li>
+        <li>CNN, Cable News Network, 19 June 2014, www.cnn.com/2014/06/19/us/ncaa-obannon-lawsuit-trial/index.html. Gulizia, Anthony, and Jeremy Mills. “Signing Day Data Predicts College Football's next Championship.” ESPN, ESPN Internet Ventures, 5 Feb. 2019, www.espn.com/college-football/story/_/id/25885149/signing-day-data-predicts-college-football-next-champion. </li>
+        <li>Haislop, Tadd. “College Athletes Should Be Paid Because Adrian Peterson Says So.” Sporting News, 10 Apr. 2014, www.sportingnews.com/us/nfl/news/adrian-peterson-college-athletes-should-be-paid-quotes-interview-vikings-running-back-oklahoma-ncaa-rules-money/1a5wkv235slls1cvje081ifmez.</li>
+        <li>Heady, Chris. “NU Athletic Director Bill Moos Says 'the Sooner the Better' for NCAA to Address Paying Athletes.” Omaha.com, 25 Apr. 2018, www.omaha.com/huskers/blogs/nu-athletic-director-bill-moos-says-the-sooner-the-better/article_a9e759a0-389e-58d6-b19e-05b24c2b63b1.html.</li>
+        <li> Hruby, Patrick. “Amateurism Isn't Educational: Debunking the NCAA's Dumbest Lie.” Sports, VICE, 14 June 2017, sports.vice.com/en_ca/article/kzqevz/amateurism-isnt-educational-debunking-the-ncaas-dumbest-lie.</li>
+        <li>“Important NCAA Lawsuits. History of Lawsuits Against the NCAA. O'Bannon vs NCAA.” Find College Athletic Scholarships and Get Recruited with Athnet Sports Recruiting, www.athleticscholarships.net/important-ncaa-lawsuits.htm.</li>
+        <li>Kasabian, Paul. “Duke's Mike Krzyzewski: NCAA 'Not Prepared' for Change to 1-and-Done Rule.” Bleacher Report, Bleacher Report, 30 Mar. 2019, bleacherreport.com/articles/2828653-dukes-mike-krzyzewski-ncaa-not-prepared-for-change-to-1-and-done-rule.</li>
+        <li>Kirshner, Alex. “NCAA Scholarship Rules Now Illegal, but Players Won't Get Paid.” SBNation.com, SBNation.com, 9 Mar. 2019, www.sbnation.com/2018/9/18/17872150/ncaa-case-verdict-ruling-explained.</li>
+        <li>“Law Cases.” Oyez, www.oyez.org/search/collegiate. LawSchoolCaseBriefs.net. “Law v. National Collegiate Athletic Association Case Brief.” Legal Outlines | Study Materials: Law v. National Collegiate Athletic Association Case Brief, 1 Jan. 1970, www.lawschoolcasebriefs.net/2013/11/law-v-national-collegiate-athletic.html.</li>
+        <li>“Let's Ace Law School.” Quimbee, www.quimbee.com/cases/o-bannon-v-ncaa. Mitrosilis, Teddy. “AJ McCarron: 'I Truly Believe College Athletes Should Be Paid'.” FOX Sports, 29 Jan. 2014, www.foxsports.com/college-football/story/aj-mccarron-i-truly-believe-college-athletes-should-be-paid-012914.</li>
+        <li>“NCAA Quotes.” BrainyQuote, Xplore, www.brainyquote.com/topics/ncaa. “NFL Revenue by Team 2017 | Statistic.” Statista, www.statista.com/statistics/193553/revenue-of-national-football-league-teams-in-2010/.</li>
+        <li>Nocera, Joe. “Let's Start Paying College Athletes.” The New York Times, The New York Times, 30 Dec. 2011, www.nytimes.com/2012/01/01/magazine/lets-start-paying-college-athletes.html.</li>
+        <li> Nocera, Joe, and Ben Strauss. Indentured: The Battle to End the Exploitation of College Athletes. Portfolio/Penguin, 2016.</li>
+        <li>OBannon, Ed, et al. Court Justice: the inside Story of My Battle against the NCAA. Diversion Books, a Division of Diversion Publishing Corp., 2018. Overthecap.com. Over the Cap, overthecap.com/salary-cap-space/.</li>
+        <li>Pells, Eddie, and LARRY FENN Associated Press. “Should College Athletes Be Paid? Quotes from Former Players, Officials.” Charlotteobserver, www.charlotteobserver.com/sports/college/mens-basketball/article9201149.html.</li>
+        <li>“Reports from District Representatives of the National Collegiate Athletic Association (Formerly the Intercollegiate Athletic Association).” American Physical Education Review, vol. 16, no. 2, 1911, pp. 102–114., doi:10.1080/23267224.1911.10651235.</li>
+        <li>“The National Collegiate Athletic Association (NCAA).” NCAA Rules Manual 2018, 2018, pp. iii-532., doi:10.1007/978-1-349-94186-5_825.</li>
+        <li> Vcortez. “NCAA Defends Scholarships for College Athletes.” NCAA.org - The Official Site of the NCAA, 5 Sept. 2018, www.ncaa.org/about/resources/media-center/feature/ncaa-defends-scholarships-college-athletes.</li>
+        <li>Vcortez. “Where Does the Money Go?” NCAA.org - The Official Site of the NCAA, 17 Mar. 2019, www.ncaa.org/about/where-does-money-go. Volk, Pete.</li>
+        <li>“Seahawks Slam NCAA.” SBNation.com, SBNation.com, 30 Jan. 2015, www.sbnation.com/college-football/2015/1/30/7951529/seahawks-richard-sherman-michael-bennett-slam-ncaa. “Why a 2020 Presidential Candidate Is Advocating for NCAA Athletes to Get Paid.” Yahoo! Sports, Yahoo!, sports.yahoo.com/why-a-2020-presidential-candidate-is-advocating-for-ncaa-athletes-to-get-paid-232306798.html.</li>
+        <li> Wilcox, Alex. “Fr. Jenkins, Mike Brey Discuss Recommendations from Commission on College Basketball.” WNDU, www.wndu.com/content/news/Fr-Jenkins-Mike-Brey-discuss-recommendations-from-Commission-on-College-Basketball-480877321.html.</li>
+        <li>Winn, Luke, and Colin Becht. “Supreme Court Decision Leaves NCAA Amateurism in Limbo.” SI.com, www.si.com/college-basketball/2016/10/03/ed-obannon-ncaa-lawsuit-supreme-court. Withiam, Hannah, and Hannah Withiam.</li>
+        <li></li> “Lonzo Ball Calls for College Athletes to Be Paid: Everyone's Doing It.” New York Post, New York Post, 23 Feb. 2018, nypost.com/2018/02/23/lonzo-ball-calls-for-college-athletes-to-be-paid-everyones-doing-it/.</li>
+        <li></li> “Should College Athletes Be Paid? Experts Weigh In.” WalletHub, wallethub.com/blog/should-college-athletes-be-paid/22681/.</li>
+      </ul>
   </body>
 </html>
