--- a/scholarship-distribution.html
+++ b/scholarship-distribution.html
@@ -11,165 +11,126 @@
     <div class="header">
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>Who Really Earns a Scholarship?</h1>
-      <p>One major argument against paying athletes is that they already are paid through their scholarship. Below is the breakdown of how many scholarships there are for each team in Division 1. There are interesting that exist between men's and women's sports as a result of Title IX and the large number of male scholarships that are used up for Football. A point of emphasis is that Football and Men's and Women's Basketball can only give out full scholarships, however, the rest of the sports can (and mostly do) give out partial scholarships. As a result, many athletes on those teams are offered a partial scholarship and only the very top athletes on each team are given a full scholarship.</p>
+      <p>One major argument against paying athletes is that they already are paid through their scholarship. Below is the breakdown of how many scholarships there are for each team in Division 1. There are interesting that exist between men's and women's sports as a result of Title IX and the large number of male scholarships that are used up for Football. A point of emphasis is that Football and Men's and Women's Basketball can only give out full scholarships, however, the rest of the sports can (and mostly do) give out partial scholarships. As a result, many athletes on those teams are offered a partial scholarship and only the very top athletes on each team are given a full scholarship. <a href="http://www.scholarshipstats.com/ncaalimits.html" style="color:#d2121e" target="_blank"></a>All of the scholarship limits</p>
     </div>
 
     <div class="all-scholarships">
       <div class="rectangle fbs-football">
-        <h3>FBS Football</h3>
-        <h5>85*</h5>
+        <h3><em>85</em>  FBS Football*</h3>
       </div>
       <div class="rectangle fcs-football">
-        <h3>FCS Football</h3>
-        <h5>65*</h5>
+        <h3><em>65</em>  FCS Football*</h3>
       </div>
       <div class="rectangle rowing">
-        <h3>Rowing</h3>
-        <h5>20</h5>
+        <h3><em>20</em>  Rowing</h3>
       </div>
       <div class="rectangle w-track">
-        <h3>Women's Cross-Country/Track and Field</h3>
-        <h5>18</h5>
+        <h3><em>18</em>  Women's Cross-Country/Track and Field</h3>
       </div>
       <div class="rectangle w-icehockey">
-        <h3>Women's Ice Hockey</h3>
-        <h5>18</h5>
+        <h3><em>18</em>  Women's Ice Hockey</h3>
       </div>
       <div class="rectangle m-icehockey">
-        <h3>Men's Ice Hockey</h3>
-        <h5>18</h5>
+        <h3><em>18</em>  Men's Ice Hockey</h3>
       </div>
       <div class="rectangle w-basketball">
-        <h3>Women's Basketball*</h3>
-        <h5>15</h5>
+        <h3><em>15</em>  Women's Basketball*</h3>
       </div>
       <div class="rectangle equestrian">
-        <h3>Equestrian</h3>
-        <h5>15</h5>
+        <h3><em>15</em>  Equestrian</h3>
       </div>
       <div class="rectangle w-soccer">
-        <h3>Women's Soccer</h3>
-        <h5>14</h5>
+        <h3><em>14</em>  Women's Soccer</h3>
       </div>
       <div class="rectangle w-swimanddive">
-        <h3>Women's Swimming and Diving</h3>
-        <h5>14</h5>
+        <h3><em>14</em>  Women's Swimming and Diving</h3>
       </div>
       <div class="rectangle m-basketball">
-        <h3>Men's Basketball*</h3>
-        <h5>13</h5>
+        <h3><em>13</em>  Men's Basketball*</h3>
       </div>
       <div class="rectangle m-track">
-        <h3>Men's Cross-Country/Track and Field</h3>
-        <h5>12.6</h5>
+        <h3><em>12.6</em>  Men's Cross-Country/Track and Field</h3>
       </div>
       <div class="rectangle m-lax">
-        <h3>Men's Lacrosse</h3>
-        <h5>12.6</h5>
+        <h3><em>12.6</em>  Men's Lacrosse</h3>
       </div>
       <div class="rectangle fieldhockey">
-        <h3>Field Hockey</h3>
-        <h5>12</h5>
+        <h3><em>12</em>  Field Hockey</h3>
       </div>
       <div class="rectangle m-gymnastics">
-        <h3>Men's Gymnastics</h3>
-        <h5>12</h5>
+        <h3><em>12</em>  Men's Gymnastics</h3>
       </div>
       <div class="rectangle w-lax">
-        <h3>Women's Lacrosse</h3>
-        <h5>12</h5>
+        <h3><em>12</em>  Women's Lacrosse</h3>
       </div>
       <div class="rectangle rugby">
-        <h3>Rugby</h3>
-        <h5>12</h5>
+        <h3><em>12</em>  Rugby</h3>
       </div>
       <div class="rectangle softball">
-        <h3>Softball</h3>
-        <h5>12</h5>
+        <h3><em>12</em>  Softball</h3>
       </div>
       <div class="rectangle w-volleyball">
-        <h3>Women's Volleyball</h3>
-        <h5>12</h5>
+        <h3><em>12</em>  Women's Volleyball</h3>
       </div>
       <div class="rectangle baseball">
-        <h3>Baseball</h3>
-        <h5>11.7</h5>
+        <h3><em>11.7</em>  Baseball</h3>
       </div>
       <div class="rectangle m-swimanddive">
-        <h3>Men's Swimming and Diving</h3>
-        <h5>9.9</h5>
+        <h3><em>9.9</em>  Men's Swimming and Diving</h3>
       </div>
       <div class="rectangle wrestling">
-        <h3>Wrestling</h3>
-        <h5>9.9</h5>
+        <h3><em>9.9</em>  Wrestling</h3>
       </div>
       <div class="rectangle w-tennis">
-        <h3>Women's Tennis</h3>
-        <h5>8</h5>
+        <h3><em>8</em>  Women's Tennis</h3>
       </div>
       <div class="rectangle w-waterpolo">
-        <h3>Women's Waterpolo</h3>
-        <h5>8</h5>
+        <h3><em>8</em>  Women's Waterpolo</h3>
       </div>
       <div class="rectangle w-skiing">
-        <h3>Women's Skiing</h3>
-        <h5>7</h5>
+        <h3><em>7</em>  Women's Skiing</h3>
       </div>
       <div class="rectangle triathlon">
-        <h3>Triathlon</h3>
-        <h5>6.5</h5>
+        <h3><em>6.5</em>  Triathlon</h3>
       </div>
       <div class="rectangle w-gymnastics">
-        <h3>Women's Gymnastics</h3>
-        <h5>6.3</h5>
+        <h3><em>6.3</em>  Women's Gymnastics</h3>
       </div>
       <div class="rectangle m-skiing">
-        <h3>Men's Skiing</h3>
-        <h5>6.3</h5>
+        <h3><em>6.3</em>  Men's Skiing</h3>
       </div>
       <div class="rectangle m-soccer">
-        <h3>Men's Soccer</h3>
-        <h5>6.3</h5>
+        <h3><em>6.3</em>  Men's Soccer</h3>
       </div>
       <div class="rectangle w-golf">
-        <h3>Women's Golf</h3>
-        <h5>6</h5>
+        <h3><em>6</em>  Women's Golf</h3>
       </div>
       <div class="rectangle beachvolleyball">
-        <h3>Beach Volleyball</h3>
-        <h5>6</h5>
+        <h3><em>6</em>  Beach Volleyball</h3>
       </div>
       <div class="rectangle bowling">
-        <h3>Bowling</h3>
-        <h5>5</h5>
+        <h3><em>5</em>  Bowling</h3>
       </div>
       <div class="rectangle w-fencing">
-        <h3>Women's Fencing</h3>
-        <h5>5</h5>
+        <h3><em>5</em>  Women's Fencing</h3>
       </div>
       <div class="rectangle m-fencing">
-        <h3>Men's Fencing</h3>
-        <h5>4.5</h5>
+        <h3><em>4.5</em>  Men's Fencing</h3>
       </div>
       <div class="rectangle m-golf">
-        <h3>Men's Golf</h3>
-        <h5>4.5</h5>
+        <h3><em>4.5</em>  Men's Golf</h3>
       </div>
       <div class="rectangle m-tennis">
-        <h3>Men's Tennis</h3>
-        <h5>4.5</h5>
+        <h3><em>4.5</em>  Men's Tennis</h3>
       </div>
       <div class="rectangle m-volleyball">
-        <h3>Men's Volleyball</h3>
-        <h5>4.5</h5>
+        <h3><em>4.5</em>  Men's Volleyball</h3>
       </div>
       <div class="rectangle m-waterpolo">
-        <h3>Men's Waterpolo</h3>
-        <h5>4.5</h5>
+        <h3><em>4.5</em>  Men's Waterpolo</h3>
       </div>
       <div class="rectangle rifle">
-        <h3>Rifle</h3>
-        <h5>3.6</h5>
+        <h3><em>3.6</em>  Rifle</h3>
       </div>
 
 
